--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "semver": "^5.4.1",
     "spellchecker": "^3.4.4",
     "testcheck": "^1.0.0-rc.2",
+    "to-arraybuffer": "^1.0.1",
     "websocket": "^1.0.25"
   },
   "devDependencies": {
